<resources>
    <string name="app_name">BasicSample</string>
    <string name="main_title">Main Activity</string>
    <string name="hello_world">Hello World!</string>
    <string name="type_something">Type something</string>
    <string name="change_text">Change text</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>
</resources>